--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
         <a href="programs.html" onclick="closeMobile()">Programs & Services</a>
         <a href="education.html" onclick="closeMobile()">Education</a>
         <a href="events.html" onclick="closeMobile()">Events</a>
-        <a href="about.html" onclick="closeMobile()">About</a>
+        <a href="about.html" class="active" onclick="closeMobile()">About</a>
         <a href="contact.html" onclick="closeMobile()">Contact</a>
         <a href="donate.html" class="mobile-donate" onclick="closeMobile()">Donate</a>
     </div>
@@ -78,7 +78,7 @@
                 <li><a href="programs.html">Programs & Services</a></li>
                 <li><a href="education.html">Education</a></li>
                 <li><a href="events.html">Events</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html" class="active">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <a href="donate.html" class="nav-donate">Donate</a>
@@ -198,14 +198,8 @@
             <div class="footer-col"><h4>Contact</h4>
                 <div class="contact-li"><i class="fas fa-map-marker-alt"></i><span>574 Watt St, Winnipeg, MB R2K 4K1</span></div>
                 <div class="contact-li"><i class="fas fa-phone"></i><span>+1 (431) 792-3791</span></div>
-                <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="mailto:rahmaislamiccentre@gmail.com">rahmaislamiccentre@gmail.com</a></span></div>
+                <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="/cdn-cgi/l/email-protection#5220333a3f333b213e333f3b3131373c26203712353f333b3e7c313d3f"><span class="__cf_email__" data-cfemail="9ae8fbf2f7fbf3e9f6fbf7f3f9f9fff4eee8ffdafdf7fbf3f6b4f9f5f7">[email&#160;protected]</span></a></span></div>
             </div>
         </div>
         <div class="footer-bottom">
-            <span>Copyright &copy; 2026 Rahma Islamic Centre. All rights reserved.</span>
-            <span>Powered by Devodez Solutions</span>
-        </div>
-    </div></footer>
-    <script src="shared.js"></script>
-</body>
-</html>
+            <span>Copyright &copy; 2026 Rahma Islamic Centre. All rights reserv
