--- a/activities.html
+++ b/activities.html
@@ -42,7 +42,7 @@
     </div>
 
     <!-- PROGRAMMES & SERVICES -->
-    <section style="background:#fff;padding:80px 24px">
+    <section style="background:#fff;padding:80px 24px;background-image:url('pattern.png');background-size:400px auto;background-repeat:repeat;background-attachment:fixed;">
         <div class="container">
             <h2 style="font-family:'Cormorant Garamond',serif;font-size:2.5rem;text-align:center;margin-bottom:60px">Programs &amp; <em style="color:#C9A84C">Services</em></h2>
             <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:24px">
@@ -86,7 +86,7 @@
     </section>
 
     <!-- EDUCATION -->
-    <section style="background:#FAF6EE;padding:80px 24px">
+    <section style="background:#FAF6EE;padding:80px 24px;background-image:url('pattern.png');background-size:400px auto;background-repeat:repeat;background-attachment:fixed;">
         <div class="container">
             <h2 style="font-family:'Cormorant Garamond',serif;font-size:2.5rem;text-align:center;margin-bottom:60px"><em style="color:#C9A84C">Education</em> Programs</h2>
             <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(320px,1fr));gap:20px">
@@ -135,7 +135,7 @@
     </section>
 
     <!-- EVENTS -->
-    <section style="background:#fff;padding:80px 24px">
+    <section style="background:#fff;padding:80px 24px;background-image:url('pattern.png');background-size:400px auto;background-repeat:repeat;background-attachment:fixed;">
         <div class="container">
             <h2 style="font-family:'Cormorant Garamond',serif;font-size:2.5rem;text-align:center;margin-bottom:40px"><em style="color:#C9A84C">Events</em> & Celebrations</h2>
             <div style="max-width:600px;margin:0 auto;text-align:center;padding:60px 40px;background:linear-gradient(135deg,#0B1F3A,#122a4e);border-radius:12px;color:#fff">
@@ -183,14 +183,8 @@
             <div class="footer-col"><h4>Contact</h4>
                 <div class="contact-li"><i class="fas fa-map-marker-alt"></i><span>574 Watt St, Winnipeg, MB R2K 4K1</span></div>
                 <div class="contact-li"><i class="fas fa-phone"></i><span>+1 (431) 792-3791</span></div>
-                <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="mailto:rahmaislamiccentre@gmail.com">rahmaislamiccentre@gmail.com</a></span></div>
+                <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="/cdn-cgi/l/email-protection#9deffcf5f0fcf4eef1fcf0f4fefef8f3e9eff8ddfaf0fcf4f1b3fef2f0"><span class="__cf_email__" data-cfemail="6d1f0c05000c041e010c00040e0e0803191f082d0a000c0401430e0200">[email&#160;protected]</span></a></span></div>
             </div>
         </div>
         <div class="footer-bottom">
-            <span>Copyright &copy; 2026 Rahma Islamic Centre. All rights reserved.</span>
-            <span>Powered by Devodez Solutions</span>
-        </div>
-    </div></footer>
-    <script src="shared.js"></script>
-</body>
-</html>
+            <span>Copyright &copy; 2026 Rahma Islamic Centre. All rights reserv
