--- a/events.html
+++ b/events.html
@@ -18,7 +18,7 @@
         <a href="prayer-times.html" onclick="closeMobile()">Prayer Times</a>
         <a href="programs.html" onclick="closeMobile()">Programs &amp; Services</a>
         <a href="education.html" onclick="closeMobile()">Education</a>
-        <a href="events.html" onclick="closeMobile()">Events</a>
+        <a href="events.html" class="active" onclick="closeMobile()">Events</a>
         <a href="about.html" onclick="closeMobile()">About</a>
         <a href="contact.html" onclick="closeMobile()">Contact</a>
         <a href="donate.html" class="mobile-donate" onclick="closeMobile()">Donate</a>
@@ -46,7 +46,7 @@
         <div class="page-header-content"><h1><em>Events</em> & Celebrations</h1></div>
     </div>
 
-    <section style="background:#fff;padding:100px 24px">
+    <section style="background:#fff;padding:100px 24px;background-image:url('pattern.png');background-size:400px auto;background-repeat:repeat;background-attachment:fixed;">
         <div class="container" style="max-width:800px;margin:0 auto;text-align:center">
             <i class="fas fa-calendar-star" style="font-size:4rem;color:#C9A84C;margin-bottom:30px;display:block"></i>
             <h2 style="font-family:'Cormorant Garamond',serif;font-size:2.8rem;margin-bottom:24px">Stay Tuned for <em style="color:#C9A84C">Upcoming Events</em></h2>
@@ -117,14 +117,8 @@
             <div class="footer-col"><h4>Contact</h4>
                 <div class="contact-li"><i class="fas fa-map-marker-alt"></i><span>574 Watt St, Winnipeg, MB R2K 4K1</span></div>
                 <div class="contact-li"><i class="fas fa-phone"></i><span>+1 (431) 792-3791</span></div>
-                <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="mailto:rahmaislamiccentre@gmail.com">rahmaislamiccentre@gmail.com</a></span></div>
+                <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="/cdn-cgi/l/email-protection#f587949d98949c869994989c9696909b818790b59298949c99db969a98"><span class="__cf_email__" data-cfemail="94e6f5fcf9f5fde7f8f5f9fdf7f7f1fae0e6f1d4f3f9f5fdf8baf7fbf9">[email&#160;protected]</span></a></span></div>
             </div>
         </div>
         <div class="footer-bottom">
-            <span>Copyright &copy; 2026 Rahma Islamic Centre. All rights reserved.</span>
-            <span>Powered by Devodez Solutions</span>
-        </div>
-    </div></footer>
-    <script src="shared.js"></script>
-</body>
-</html>
+            <span>Copyright &copy; 2026 Rahma Islamic Centre. All rights reserv
