--- a/newsletter.html
+++ b/newsletter.html
@@ -291,7 +291,7 @@
             <div class="footer-col"><h4>Contact</h4>
                 <div class="contact-li"><i class="fas fa-map-marker-alt"></i><span>574 Watt St, Winnipeg, MB R2K 4K1</span></div>
                 <div class="contact-li"><i class="fas fa-phone"></i><span>+1 (431) 792-3791</span></div>
-                <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="mailto:rahmaislamiccentre@gmail.com">rahmaislamiccentre@gmail.com</a></span></div>
+                <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="/cdn-cgi/l/email-protection#afddcec7c2cec6dcc3cec2c6cccccac1dbddcaefc8c2cec6c381ccc0c2"><span class="__cf_email__" data-cfemail="314350595c5058425d505c585252545f45435471565c50585d1f525e5c">[email&#160;protected]</span></a></span></div>
             </div>
         </div>
         <div class="footer-bottom">
@@ -299,17 +299,11 @@
             <span>Powered by Devodez Solutions</span>
         </div>
     </div></footer>
-    <script src="shared.js"></script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="shared.js"></script>
 
     <script>
         document.getElementById('newsletterForm').addEventListener('submit', function(e) {
             e.preventDefault();
             const btn = document.getElementById('nlBtn');
             btn.textContent='Subscribing…'; btn.disabled=true;
-            setTimeout(()=>{ btn.textContent="✓ You're Subscribed!"; btn.classList.add('success');
-                setTimeout(()=>{ btn.textContent='Subscribe Now →'; btn.classList.remove('success'); btn.disabled=false; this.reset(); }, 3000);
-            }, 1200);
-        });
-    </script>
-</body>
-</html>
+            setTimeout(()=>{ btn.textContent="✓ 
