--- a/prayer-times.html
+++ b/prayer-times.html
@@ -69,7 +69,7 @@
 
 <div class="mobile-menu" id="mobileMenu">
     <a href="index.html" onclick="closeMobile()">Home</a>
-    <a href="prayer-times.html" onclick="closeMobile()">Prayer Times</a>
+    <a href="prayer-times.html" class="active" onclick="closeMobile()">Prayer Times</a>
     <a href="programs.html" onclick="closeMobile()">Programs &amp; Services</a>
     <a href="education.html" onclick="closeMobile()">Education</a>
     <a href="events.html" onclick="closeMobile()">Events</a>
@@ -213,7 +213,7 @@
             <div class="footer-col"><h4>Contact</h4>
                 <div class="contact-li"><i class="fas fa-map-marker-alt"></i><span>574 Watt St, Winnipeg, MB R2K 4K1</span></div>
                 <div class="contact-li"><i class="fas fa-phone"></i><span>+1 (431) 792-3791</span></div>
-                <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="mailto:rahmaislamiccentre@gmail.com">rahmaislamiccentre@gmail.com</a></span></div>
+                <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="/cdn-cgi/l/email-protection#f280939a9f939b819e939f9b9191979c868097b2959f939b9edc919d9f"><span class="__cf_email__" data-cfemail="9ae8fbf2f7fbf3e9f6fbf7f3f9f9fff4eee8ffdafdf7fbf3f6b4f9f5f7">[email&#160;protected]</span></a></span></div>
             </div>
         </div>
         <div class="footer-bottom">
@@ -221,16 +221,7 @@
             <span>Powered by Devodez Solutions</span>
         </div>
     </div></footer>
-    <script src="shared.js"></script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="shared.js"></script>
     <script>
 /* ─── INIT ─── */
-window.addEventListener('DOMContentLoaded', function() {
-    const now = new Date();
-    document.getElementById('monthPicker').value = now.getMonth()+1;
-    loadToday();
-    loadMonth();
-    document.getElementById('monthPicker').addEventListener('change', loadMonth);
-});
-</script>
-</body>
-</html>
+window.addEventListener('DOMContentLoa
