--- a/programs.html
+++ b/programs.html
@@ -16,7 +16,7 @@
     <div class="mobile-menu" id="mobileMenu">
         <a href="index.html" onclick="closeMobile()">Home</a>
         <a href="prayer-times.html" onclick="closeMobile()">Prayer Times</a>
-        <a href="programs.html" onclick="closeMobile()">Programs &amp; Services</a>
+        <a href="programs.html" class="active" onclick="closeMobile()">Programs &amp; Services</a>
         <a href="education.html" onclick="closeMobile()">Education</a>
         <a href="events.html" onclick="closeMobile()">Events</a>
         <a href="about.html" onclick="closeMobile()">About</a>
@@ -46,7 +46,7 @@
         <div class="page-header-content"><h1>Programs <em>&amp; Services</em></h1></div>
     </div>
 
-    <section style="background:#fff;padding:80px 24px">
+    <section style="background:#fff;padding:80px 24px;background-image:url('pattern.png');background-size:400px auto;background-repeat:repeat;background-attachment:fixed;">
         <div class="container" style="max-width:1200px;margin:0 auto">
             <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(320px,1fr));gap:30px">
                 
@@ -147,14 +147,8 @@
             <div class="footer-col"><h4>Contact</h4>
                 <div class="contact-li"><i class="fas fa-map-marker-alt"></i><span>574 Watt St, Winnipeg, MB R2K 4K1</span></div>
                 <div class="contact-li"><i class="fas fa-phone"></i><span>+1 (431) 792-3791</span></div>
-                <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="mailto:rahmaislamiccentre@gmail.com">rahmaislamiccentre@gmail.com</a></span></div>
+                <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="/cdn-cgi/l/email-protection#3341525b5e525a405f525e5a5050565d47415673545e525a5f1d505c5e"><span class="__cf_email__" data-cfemail="bcceddd4d1ddd5cfd0ddd1d5dfdfd9d2c8ced9fcdbd1ddd5d092dfd3d1">[email&#160;protected]</span></a></span></div>
             </div>
         </div>
         <div class="footer-bottom">
-            <span>Copyright &copy; 2026 Rahma Islamic Centre. All rights reserved.</span>
-            <span>Powered by Devodez Solutions</span>
-        </div>
-    </div></footer>
-    <script src="shared.js"></script>
-</body>
-</html>
+            <span>Copyright &copy; 2026 Rahma Islamic Centre. All rights reserv
