--- a/donate.html
+++ b/donate.html
@@ -158,7 +158,7 @@
             <div class="footer-col"><h4>Contact</h4>
                 <div class="contact-li"><i class="fas fa-map-marker-alt"></i><span>574 Watt St, Winnipeg, MB R2K 4K1</span></div>
                 <div class="contact-li"><i class="fas fa-phone"></i><span>+1 (431) 792-3791</span></div>
-                <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="mailto:rahmaislamiccentre@gmail.com">rahmaislamiccentre@gmail.com</a></span></div>
+                <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="/cdn-cgi/l/email-protection#6e1c0f06030f071d020f03070d0d0b001a1c0b2e09030f0702400d0103"><span class="__cf_email__" data-cfemail="80f2e1e8ede1e9f3ece1ede9e3e3e5eef4f2e5c0e7ede1e9ecaee3efed">[email&#160;protected]</span></a></span></div>
             </div>
         </div>
         <div class="footer-bottom">
@@ -166,7 +166,7 @@
             <span>Powered by Devodez Solutions</span>
         </div>
     </div></footer>
-    <script src="shared.js"></script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="shared.js"></script>
 
     <script>
         let cur = 'CAD';
@@ -175,9 +175,4 @@
         function clearAmts() { document.querySelectorAll('.amt-btn').forEach(b=>b.classList.remove('selected')); }
         function processDonate() {
             const amt=parseFloat(document.getElementById('donateAmt').value);
-            if(!amt||amt<=0){alert('Please enter a valid donation amount.');return;}
-            alert('Thank you for your generous donation of '+cur+' $'+amt.toFixed(2)+'!\nPlease contact rahmaislamiccentre@gmail.com to complete your donation.');
-        }
-    </script>
-</body>
-</html>
+            if(!amt||amt<=
