--- a/education.html
+++ b/education.html
@@ -17,7 +17,7 @@
         <a href="index.html" onclick="closeMobile()">Home</a>
         <a href="prayer-times.html" onclick="closeMobile()">Prayer Times</a>
         <a href="programs.html" onclick="closeMobile()">Programs &amp; Services</a>
-        <a href="education.html" onclick="closeMobile()">Education</a>
+        <a href="education.html" class="active" onclick="closeMobile()">Education</a>
         <a href="events.html" onclick="closeMobile()">Events</a>
         <a href="about.html" onclick="closeMobile()">About</a>
         <a href="contact.html" onclick="closeMobile()">Contact</a>
@@ -46,7 +46,7 @@
         <div class="page-header-content"><h1><em>Education</em> Programs</h1></div>
     </div>
 
-    <section style="background:#FAF6EE;padding:80px 24px">
+    <section style="background:#FAF6EE;padding:80px 24px;background-image:url('pattern.png');background-size:400px auto;background-repeat:repeat;background-attachment:fixed;">
         <div class="container" style="max-width:1100px;margin:0 auto">
             <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(450px,1fr));gap:24px">
                 
@@ -151,14 +151,8 @@
             <div class="footer-col"><h4>Contact</h4>
                 <div class="contact-li"><i class="fas fa-map-marker-alt"></i><span>574 Watt St, Winnipeg, MB R2K 4K1</span></div>
                 <div class="contact-li"><i class="fas fa-phone"></i><span>+1 (431) 792-3791</span></div>
-                <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="mailto:rahmaislamiccentre@gmail.com">rahmaislamiccentre@gmail.com</a></span></div>
+                <div class="contact-li"><i class="fas fa-envelope"></i><span><a href="/cdn-cgi/l/email-protection#bcceddd4d1ddd5cfd0ddd1d5dfdfd9d2c8ced9fcdbd1ddd5d092dfd3d1"><span class="__cf_email__" data-cfemail="6614070e0b070f150a070b0f0505030812140326010b070f0a4805090b">[email&#160;protected]</span></a></span></div>
             </div>
         </div>
         <div class="footer-bottom">
-            <span>Copyright &copy; 2026 Rahma Islamic Centre. All rights reserved.</span>
-            <span>Powered by Devodez Solutions</span>
-        </div>
-    </div></footer>
-    <script src="shared.js"></script>
-</body>
-</html>
+            <span>Copyright &copy; 2026 Rahma Islamic Centre. All rights reserv
